--- a/5-sol/5-sol.tex
+++ b/5-sol/5-sol.tex
@@ -45,8 +45,11 @@
 \section{Definiciones y fórmulas útiles}
 \def\mcd{(a:b)}
 \begin{itemize}
-	\item Sea $ax + by = c \sisolosi \frac{a}{\mcd} x + \frac{b}{\mcd}y = \frac{c}{(a:b)}$,
-	      donde $\frac{c}{(a:b)} \en \enteros$, entonces hay solución.
+  \item Sea
+    $ax + by = c \text{ tiene solución para $x$ y $y$ }\\
+    \sisolosi 
+    \ub{\frac{a}{\mcd}}{=A} x + \ub{\frac{b}{\mcd}}{=B} y = \ub{ \frac{c}{(a:b)}}{= C \en \enteros}$,
+	     \text{también tiene solución para $x$ y $y$.}  
 \end{itemize}
 
 \subsubsection*{Ejercicios dados en clase:}
@@ -79,7 +82,7 @@ producto $B$ cuesta 48 pesos, ¿cuántas unidades de cada producto se pueden com
 
 $
 	\llave{l}{
-		A \geq 0 y B \geq 0 \text{ Son productos}\\
+    A \geq 0 \y B \geq 0 \text{. Dado que son productos.}\\
 		(A:B) = 3 \entonces 39A + 28B = 135
 		\flecha{coprimizar}
 		13A + 16B = 45\\
