--- a/5-sol/5-sol.tex
+++ b/5-sol/5-sol.tex
@@ -151,13 +151,37 @@ para algún $x_0$ con $0\leq x_0 < m_1\cdot m_2 \cdots m_n$
 \setcounter{ejercicio}{0} % Reset the custom counter
 %1
 \ejercicio
+
 %2
 \ejercicio
 Determinar todos los $(a,b)$ que simultáneamente $4 \divide a,\, 8 \divide b \y 33a + 9b = 120$.
 
 \separadorCorto
-respuesta: $(a,b) = (2+3k, 6-11k)$ con $\congruencia{k}{2}{8}$\\
-\red{Pasar ejercicio}
+Si $(33:9) \divide 120 \entonces 33a + 9b = 120$ tiene solución. $(33:9)=3,\, 3 \divide 120$\Tilde\\
+$
+\llave{l}{
+ 4 \divide a \to a = 4k_!\\
+  8 \divide b \to b = 8k_2
+}
+\flecha{meto en}[$33a + 9b = 120$]
+132 k_1 + 72 k_2 = 120
+\flecha{$(132:72) = 12 \divide 120$}[coprimizo]
+11 k_1 + 6 k_2 = 10\\
+\llaves{l}{
+ 11 = 6 \cdot 1 + 5 \\
+ 6 = 5 \cdot 1 + 1 \Tilde \\
+}
+\flecha{combinación entera 1}[con Euclides como]
+1 =  \blue{11} \cdot -1 + \blue{6} \cdot -2 
+\flecha{solución}[particular]
+10 = \blue{11}\cdot\ub{-10}{k_1}   + \blue{6} \cdot \ub{20}{k_2} \\
+$
+Para $11 k_1 + 6 k_2 = 10$ tengo la solución general $(k_1, k_2) = (-10 + (-6)k, 20 + 11k)$ con $k \en \enteros$\\
+Pero quiero los valores de $a$ y $b$:\\
+La solución general será $\boxed{(a,b) = (4k_1, 8k_2) = (-40 + 24 k, 160 + (-88)k)}$\\
+
+\noindent Otra respuesta con solución a ojo menos falopa, esta recta es la misma que la anterior:\\
+$(a,b) = (2+3k, 6-11k)$ con $\congruencia{k}{2}{8} \to (a,b) = $\\
 
 %3
 \ejercicio
@@ -197,6 +221,22 @@ Hallar, cuando existan, todas las soluciones de las siguientes ecuaciones de con
 		      }\\
 		      \flecha{respuesta} \congruencia{X}{3}{5} $
 	      \red{corroborar}
+
+      \item
+      \item $\congruencia{78X}{30}{12126}  \to 78X - 12126 Y = 30 \flecha{$(78:12126) = 6$}[coprimizando] 13X - 2021 Y = 5$\\
+        Busco solución particular con Euclides:\\
+        $\llave{l}{
+          \blue{2021} =  \blue{13} \cdot 155 + 6\\
+         13 =  6 \cdot 2 + 1
+       }\flecha{Escribo al 1 como}[combinación de \blue{2021} y\blue{13}]
+       1 = \blue{13} \cdot 311 + \blue{2021} \cdot (-2) 
+       \flecha{quiero}[al 5]
+       5 =  \blue{13}\cdot 1555 + \blue{2021} \cdot (-10)$\\
+
+       Respuesta: $\boxed{\congruencia{78X}{30}{12126}
+       \stackrel{\red{?}} \sisolosi \congruencia{X}{1555}{2021}}$
+
+       
 \end{enumerate}
 
 \separadorCorto
