--- a/4-sol/definiciones.tex
+++ b/4-sol/definiciones.tex
@@ -86,7 +86,7 @@
 \renewcommand{\theejercicio}{\arabic{ejercicio}} % el contador es un número arabic
 \newcommand{\ejercicio}{%
 	\stepcounter{ejercicio}% incremento en uno
-  \titleformat{\section}[runin]{\bfseries}{\theejercicio}{0em}{}[\\ ]%
+  \titleformat{\section}[runin]{\bfseries}{\theejercicio}{0em}{}[ ]%
 	\section*{\theejercicio.}%
 }
 
