--- a/5-sol/definiciones.tex
+++ b/5-sol/definiciones.tex
@@ -57,6 +57,7 @@
 \def\noDivide{\centernot\divide}
 \def\congruente{\, \equiv \,}
 \newcommand{\congruencia}[3]{#1 \equiv #2 \;(#3)}
+\newcommand{\conga}[1]{\stackrel{(#1)}{\congruente}}
 \newcommand{\divset}[2]{\mathcal{D}(#1) = \set{#2}}
 \newcommand{\divsetP}[2]{\mathcal{D_+}(#1) = \set{#2}}
 \newcommand{\ub}[2]{ \underbrace{#1}_{#2} }
@@ -75,7 +76,7 @@
 \def\otext{\quad\text{o}\quad}
 
 
-\newcommand{\llamada}[1]{\stackrel{\cyan{\FiveStar$^{#1}$}} }
+\newcommand{\llamada}[1]{\stackrel{\cyan{\FiveStar$^{#1}$}}{} }
 
 % separador\
 \def\separador{\noindent\rule{\linewidth}{0.4pt}\\}
@@ -86,7 +87,7 @@
 \renewcommand{\theejercicio}{\arabic{ejercicio}} % el contador es un número arabic
 \newcommand{\ejercicio}{%
 	\stepcounter{ejercicio}% incremento en uno
-  \titleformat{\section}[runin]{\bfseries}{\theejercicio}{0em}{}[\\ ]%
+  \titleformat{\section}[runin]{\bfseries}{\theejercicio}{0em}{}[ ]%
 	\section*{\theejercicio.}%
 }
 
