--- a/5-sol/5-sol.tex
+++ b/5-sol/5-sol.tex
@@ -140,6 +140,16 @@ para algún $x_0$ con $0\leq x_0 < m_1\cdot m_2 \cdots m_n$
 
 
 \subsubsection*{Ejercicios dados en clase:}
+\ejercicio Hallar los posibles restos de dividir a $a$ por 70, 
+sabiendo que $(a^{1081}+ 3a + 17 : 105) = 35$
+\separadorCorto
+Hay que notar:
+$\llave{l}{
+ 5 \divide m\\ 
+ 7 \divide m\\ 
+ 3 \noDivide m \red{¡He aquí la más trampa!}
+}$\\
+Estudio
 
 \newpage
 
