--- a/5-sol/5-sol.tex
+++ b/5-sol/5-sol.tex
@@ -56,7 +56,7 @@
 	      %  \ub{A}{\frac{a}{\mcd}} x + \ub{B}{\frac{b}{\mcd}} y = \ub{C}{\frac{c}{(a:b)}} \en \enteros$,
 	      % \text{también tiene solución para $x$ y $y$.}
 
-	\item Las socluciones al sistema: $S = \set{(x,y) \en \enteros^2 \text{ con }
+	\item Las soluciones al sistema: $S = \set{(x,y) \en \enteros^2 \text{ con }
 			      \llaves{l}{
 				      x = x_0 + kb'\\
 				      y = y_0 + kb'
@@ -157,29 +157,76 @@ $ (\ub{a^{1081}+ 3a + 17}{m} : \ub{105}{3\cdot 5 \cdot 7})  = \ub{35}{5 \cdot 7}
 		\to \congruencia{a^{1081}+ 3a + \ub{17}{\conga{5} 2}}{0}{5}
 		\to
 		\llave{ll}{
-			\text{si} & 5 \divide a \to \congruencia{2}{0}{5} \skull  \\
+			\text{si} & 5 \divide a \to \congruencia{2}{0}{5} \magenta{ ningún $a$ } \skull  \\
 			\text{si} & 5 \noDivide a
 			\flecha{$a^{1081} = a \cdot (a^4)^{270}$}[5 primo y $5 \noDivide a$, fermateo]
 			\congruencia{a + 3a + 2}{0}{5} \to \congruencia{a}{2}{5}\\
-			& \text{si } 5 \divide m \entonces \boxed{\congruencia{a}{2}{5}}
+			& \text{si } 5 \divide m \entonces \boxed{\congruencia{a}{2}{5}}\Tilde
 		}
 		\\
 		7 \divide m
 		\to \congruencia{a^{1081}+ 3a + \ub{17}{\conga{7} 3}}{0}{7}
 		\to
 		\llave{ll}{
-			\text{si} & 7 \divide a \to \congruencia{3}{0}{7} \skull  \\
+			\text{si} & 7 \divide a \to \congruencia{3}{0}{7} \magenta{ ningún $a$ } \skull  \\
 			\text{si} & 7 \noDivide a
 			\flecha{$a^{1081} = a \cdot (a^6)^{180}$}[7 primo y $7 \noDivide a$, fermateo]
 			\congruencia{a + 3a + 3}{0}{7} \to \congruencia{4a}{-3}{7}\\
-			& \text{si } 7 \divide m \entonces \boxed{\congruencia{a}{1}{7}}
+			& \text{si } 7 \divide m \entonces \boxed{\congruencia{a}{1}{7}}\Tilde
 		}
-        \\
-      3 \noDivide m 
+		\\
+		3 \noDivide m
 		\to \congruencia{a^{1081}+ 3a + \ub{17}{\conga{3} 2}}{0}{3}
-      
-	}$
+		\to
+		\llave{ll}{
+			\text{si} & 3 \divide a \to \congruencia{2}{0}{3}
+			% \flecha{$3\noDivide m$ y $3 \divide a$}
+			\llave{l}{
+				\text{si } 3 \divide m \to \congruencia{2}{0}{3} \to \text{\magenta{ningún $a$} $\skull$ , pero } \\
+				\text{quiero } 3 \noDivide m \entonces \magenta{todo $a$} \text{, pero en esta rama}\\
+				3 \divide a \entonces \text{si } 3\noDivide m \to \boxed{\congruencia{a}{0}{3}} \Tilde
 
+			}\\
+			\text{si} & 3 \noDivide a
+			\flecha{$a^{1081} = a \cdot (a^2)^{540}$}[3 primo y $3 \noDivide a$, fermateo]
+			\congruencia{a + 0 + 2}{0}{7} \to \congruencia{a}{-2}{3}\\
+			& \text{si } 3 \noDivide m \entonces \llamada{1} \boxed{a \not\equiv 1\ (3)}\Tilde
+		}
+	}$
+Debido a la última condición $\llamada{1}$, el problema se ramifica en 2 sistemas:\\
+\begin{minipage}{0.5\textwidth}
+	\centering
+	$
+		\llave{l}{
+			\congruencia{a}{2}{5} \\
+			\congruencia{a}{1}{7} \\
+			\congruencia{a}{0}{3}
+		}
+		\to \boxed{\congruencia{a}{22}{105} }
+	$
+\end{minipage}
+\begin{minipage}{0.5\textwidth}
+	\centering
+	$\llave{l}{
+			\congruencia{a}{2}{5} \\
+			\congruencia{a}{1}{7} \\
+			\congruencia{a}{2}{3}
+		}
+		\to \boxed{\congruencia{a}{92}{105} }
+	$
+\end{minipage}
+Veo que para el conjunto de posibles $a$
+$\llaves{c}{
+ a = 105k_1 + 22 \\
+  o \\
+ a = 105k_2 + 92 
+}\flecha{calculo}[$\conga{70}$]$
+$\congruencia{a}{22}{35} \flecha{quiero los restos}[pedidos del enunciado] r_{70}(a) = \set{22, 57}$,
+valores de $a$ que cumplan condición de $r_{70}(a)$
+
+\ejercicio
+Sea $a \en \enteros$ tal que $(a^{197} - 26 : 15) = 1$. Hallar los posibles valores de
+$(a^{97} - 36 : 135)$
 \newpage
 
 %=========================
